--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
