--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-PORT = 3000
+PORT = 8020
+SQL_HOST = 144.24.100.37
+SQL_USER = hs_admin
+SQL_PASSWORD = 'hs@421#'
+SQL_DATABASE = Attendance
+
+MONGO_URL = mongodb://hs_admin:hs125_@144.24.100.37:27017/
